networkpolicy/namespace-argo-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: namespace-isolation.allow-all
  namespace: argocd
spec:
  tier: namespace-isolation
  ingress:
    - action: Allow
      source: {}
      destination: {}
  egress:
    - action: Allow
      source: {}
      destination: {}
  types:
    - Ingress
    - Egress
